--- a/src/style.css
+++ b/src/style.css
@@ -4,3 +4,15 @@
 body{
     background-color: antiquewhite;
 }
+
+#navbar{
+    float: left;
+    background-color: rebeccapurple;
+    width: 100%;
+    height: 50px;
+}
+
+.card{
+    float: left;
+    width: 30%;
+}
